fix - Java extractor: drop non-literal field defaults, correct run docs. Thanks @LeoFesti9 for the revision. Co-authored-by: LeoFesti9